--- a/elk/Dockerfile
+++ b/elk/Dockerfile
@@ -55,6 +55,10 @@ EXPOSE 5000 5555
 ADD ./start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
 
+###filebeat template
+ADD ./filebeat.template.json /tmp/filebeat.template.json
+
+
 #
 CMD [ "/usr/local/bin/start.sh" ]
 
