Move davrods from docker-dev to its own repository. For RITDEV-129 and RITDEV-252

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,13 @@ services:
       LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
+  davrods:
+    build: externals/rit-davrods/
+    environment:
+      VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
+      LOGSTASH_TAGS: DAVRODS
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
   metalnx:
     build: externals/rit-metalnx-web/
     hostname: metalnx
