Added ENV variable for MirthC MDL_EXPORT channel. For RITDEV-196

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       IRODS_RESOURCE_HOST: ires
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
+      MIRTH_MDL_EXPORT_CHANNEL: fhml-srv024.unimaas.nl:6666
       LOGSPOUT: ignore
     networks:
       - default
