--- a/icat/filebeat.yml
+++ b/icat/filebeat.yml
@@ -1,4 +1,3 @@
-
 filebeat.prospectors:
 
 # Each - is a prospector. Most options can be set at the prospector level, so
@@ -11,9 +10,14 @@ filebeat.prospectors:
   paths:
     - /var/lib/irods/iRODS/server/log/*Log*
 
+  #Multiline
+  multiline.pattern: '^[A-Z][a-z]{2}\s+\d'
+  multiline.negate: true
+  multiline.match: after
+  multiline.max_linex: 10000
+
+  #Tags
+  tags: ["ICAT"]
 
 output.logstash:
     hosts: ["elk:5044"]
-
-
-tags: ["ICAT"]
