--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       VIRTUAL_HOST: pacman.${RIT_ENV}.rit.unimaas.nl
       OLS_URL: http://fhml-srv018.unimaas.nl:8081/ols-boot
       LOGSTASH_TAGS: PACMAN
+      JWT_SECRET: foobar
   irods:
     build: icat/
     hostname: irods
