--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -2,6 +2,8 @@ cfg_iRodsUser = service-dropzones
 cfg_iRodsPassword = foobar
 cfg_iRodsUserMdl = service-mdl
 cfg_iRodsPasswordMdl = foobar
+cfg_iRodsUserDwh = service-dwh
+cfg_iRodsPasswordDwh = foobar
 cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl:8081/ols-boot/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
