--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -19,7 +19,8 @@ RUN apt-get update \
     g++ \
     libssl-dev \
     libcurl4-openssl-dev \
-    fortune-mod
+    fortune-mod \
+    nano
 
 
 RUN locale-gen en_US.UTF-8
