Parameter for epic url

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -14,4 +14,4 @@ cfg_SolrURL = http://solr/solr
 cfg_SolrUser = admin
 cfg_SolrPassword = admin
 cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996/
-
+cfg_Environment = RIT_ENV
