--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,9 @@ services:
       - ./externals/irods-helper-cmd:/helpers
     # Required for CIFS mounting. cap-add not enough in Windows for some reason.
     privileged: true
+    networks:
+      - default
+      - common_default
   db:
     image: mysql:5.6
     hostname: db
