add channel and global variable for crossref-lookup

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -16,3 +16,4 @@ cfg_SolrPassword = admin
 cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996/
 cfg_EpicPrefix = 21.T12996
 cfg_EpicHandlerUrl = pacman.RIT_ENV.rit.unimaas.nl
+cfg_CrossRefURL = http://crossref-lookup/works
