--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -13,6 +13,6 @@ cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseu
 cfg_SolrURL = http://solr/solr
 cfg_SolrUser = admin
 cfg_SolrPassword = admin
-cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996/
+cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996
 cfg_EpicPrefix = 21.T12996
-cfg_EpicHandlerUrl = pacman.RIT_ENV.rit.unimaas.nl
+cfg_EpicHandlerUrl = http://pacman.RIT_ENV.rit.unimaas.nl
