Added RPM build tools + SPECS files for 'cifs-utils' v6.0 and 6.7 (RITDEV-290)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 channels-backup
 externals/*
 mirthconnect/305_mirth.pfx
+
+# for RPM-build
+vol_rpmbuild/BUILD
+vol_rpmbuild/BUILDROOT
+vol_rpmbuild/RPMS
+vol_rpmbuild/SOURCES
+vol_rpmbuild/SRPMS
