--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ externals/*
 mirthconnect/305_mirth.pfx
 
 # for RPM-build
-vol_rpmbuild/BUILD
-vol_rpmbuild/BUILDROOT
-vol_rpmbuild/RPMS
-vol_rpmbuild/SOURCES
-vol_rpmbuild/SRPMS
+ires-centos/vol_rpmbuild/BUILD
+ires-centos/vol_rpmbuild/BUILDROOT
+ires-centos/vol_rpmbuild/RPMS
+ires-centos/vol_rpmbuild/SOURCES
+ires-centos/vol_rpmbuild/SRPMS
