--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -17,3 +17,5 @@ cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996
 cfg_EpicPrefix = 21.T12996
 cfg_EpicHandlerUrl = http://pacman.RIT_ENV.rit.unimaas.nl
 cfg_CrossRefURL = http://crossref-lookup/works
+cfg_MirthConnectUser_UM = mdl-dev
+cfg_MirthConnectPassword_UM = foobar
