--- a/ires-centos/filebeat.yml
+++ b/ires-centos/filebeat.yml
@@ -17,7 +17,7 @@ filebeat.prospectors:
   multiline.max_linex: 10000
 
   #Tags
-  tags: ["IRES-CENTOS"]
+  tags: ["IRES_CENTOS"]
 
 output.logstash:
     hosts: ["elk:5044"]
