Added new logstash tags the better differentiate between ires server in UM and AZM

--- a/ires/filebeat.yml
+++ b/ires/filebeat.yml
@@ -17,7 +17,7 @@ filebeat.prospectors:
   multiline.max_linex: 10000
 
   #Tags
-  tags: ["IRES"]
+  tags: ["IRES_UM"]
 
 output.logstash:
     hosts: ["elk:5044"]
