--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -10,7 +10,7 @@ cfg_iRodsRestURL = http://irods-frontend/rest
 cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl:8081/ols-boot/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
-cfg_SolrURL = http://solr/solr
+cfg_SolrURL = http://solr.RIT_ENV.rit.unimaas.nl/solr
 cfg_SolrUser = admin
 cfg_SolrPassword = admin
 cfg_EpicURL = https://epic3.storage.surfsara.nl:8007/api/handles/21.T12996
