--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -7,7 +7,7 @@ cfg_iRodsPasswordDwh = foobar
 cfg_iRodsUserPID = service-pid
 cfg_iRodsPasswordPID = foobar
 cfg_iRodsRestURL = http://irods-frontend/rest
-cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl:8081/ols-boot/api
+cfg_OlsApiURL = http://ols.tst.rit.unimaas.nl/api
 cfg_PseudonymizationUrl = http://localhost:1086/services/rest/Pseudonymization/pseudonym
 cfg_PseudonymizationUrl2 = https://fhml-srv032.unimaas.nl:443/services/rest/Pseudonymization
 cfg_SolrURL = http://solr.RIT_ENV.rit.unimaas.nl/solr
