--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
       IRODS_RESOURCE_HOST_DEB: ires
       IRODS_RESOURCE_HOST_RPM: ires-centos
+      IRODS_INGEST_REMOVE_DELAY: 5m
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
       MIRTH_MDL_EXPORT_CHANNEL: fhml-srv024.unimaas.nl:6666
@@ -53,6 +54,7 @@ services:
       RODS_PASSWORD: irods
       PGPASSWORD: foobar
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
+      IRODS_INGEST_REMOVE_DELAY: 5m
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
       MIRTH_MDL_EXPORT_CHANNEL: fhml-srv024.unimaas.nl:6666
@@ -75,6 +77,7 @@ services:
       RODS_PASSWORD: irods
       PGPASSWORD: foobar
       VIRTUAL_HOST: ires-centos.${RIT_ENV}.rit.unimaas.nl
+      IRODS_INGEST_REMOVE_DELAY: 5m
       MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
       MIRTH_METADATA_CHANNEL: mirthconnect:6670
       MIRTH_MDL_EXPORT_CHANNEL: fhml-srv024.unimaas.nl:6666
