Added the repo for mirth alerting for RITDEV-480 Volume mount the repo for mirth alerting Added the new channels and alert

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/channels:/opt/channels
+      - ./externals/alerts:/opt/alerts
       - ./channels-backup:/opt/channels-backup
   crossref-lookup:
     build: externals/crossref-lookup
