--- a/ires/Dockerfile
+++ b/ires/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update \
     python-requests \
     python-jsonschema \
     python-ldap \
+    sudo \
     lsof \
     make \
     cifs-utils  \
@@ -23,18 +24,19 @@ RUN apt-get update \
     nano
 
 
-RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
+#RUN locale-gen en_US.UTF-8
+#ENV LANG en_US.UTF-8
+#ENV LANGUAGE en_US.UTF-8
+#ENV LC_ALL en_US.UTF-8
+ENV IRODS_VERSION 4.2.3
 
 # install iRODS
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
     && echo "deb [arch=amd64] https://packages.irods.org/apt/ trusty main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    irods-server \
-    irods-dev
+    irods-server=${IRODS_VERSION} \
+    irods-dev=${IRODS_VERSION}
 
 # install Metalnx RMD
 ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
@@ -46,7 +48,7 @@ RUN mkdir /opt/irods
 # https://bugs.launchpad.net/ubuntu/+source/cifs-utils/+bug/1372120
 RUN mkdir /etc/cifs-utils && ln -s /usr/lib/x86_64-linux-gnu/cifs-utils/idmapwb.so /etc/cifs-utils/idmap-plugin
 
-ADD ./setup_responses /opt/irods/setup_responses
+ADD ./setup_responses /etc/irods/setup_responses
 ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
 ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
