--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update \
     python-requests \
     python-jsonschema \
     python-ldap \
+    sudo \
     lsof \
     make \
     g++ \
@@ -24,19 +25,20 @@ RUN apt-get update \
     nano
 
 
-RUN locale-gen en_US.UTF-8
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
+#RUN locale-gen en_US.UTF-8
+#ENV LANG en_US.UTF-8
+#ENV LANGUAGE en_US.UTF-8
+#ENV LC_ALL en_US.UTF-8
+ENV IRODS_VERSION 4.2.3
 
 # install iRODS
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
     && echo "deb [arch=amd64] https://packages.irods.org/apt/ trusty main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    irods-server \
-    irods-database-plugin-postgres \
-    irods-dev
+    irods-server=${IRODS_VERSION} \
+    irods-database-plugin-postgres=${IRODS_VERSION} \
+    irods-dev=${IRODS_VERSION}
 
 # install Metalnx RMD
 ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
@@ -44,7 +46,7 @@ RUN dpkg -i /tmp/emc-metalnx-rmd-1.0-1.deb
 
 RUN mkdir /opt/irods
 
-ADD ./setup_responses /opt/irods/setup_responses
+ADD ./setup_responses /etc/irods/setup_responses
 ADD ./setupdb.sh /opt/irods/setupdb.sh
 ADD ./config.sh /opt/irods/config.sh
 ADD ./bootstrap.sh /opt/irods/bootstrap.sh
