--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,7 @@ services:
       - default
       - common_default
   metalnx:
-    build: externals/rit-metalnx-web/
+    build: externals/metalnx-web/packaging/docker/
     hostname: metalnx
     environment:
       IRODS_HOST: irods
@@ -142,9 +142,22 @@ services:
       IRODS_ZONE: nlmumc
       IRODS_USER: rods
       IRODS_PASS: irods
+      METALNX_POSTGRES_HOST: metalnx-db
+      METALNX_POSTGRES_DB_NAME: metalnx
+      METALNX_POSTGRES_DB_USER: metalnx
+      METALNX_POSTGRES_DB_PASS: foobar
       VIRTUAL_HOST: metalnx.${RIT_ENV}.rit.unimaas.nl
       VIRTUAL_PORT: 8080
       LOGSTASH_TAGS: METALNX
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+  metalnx-db:
+    image: postgres:9.4
+    hostname: metalnx-db
+    environment:
+      POSTGRES_USER: metalnx
+      POSTGRES_PASSWORD: foobar
+      LOGSPOUT: ignore
     volumes:
       - /etc/localtime:/etc/localtime:ro
   mirthconnect:
