Added logstash tag for crossref-lookup container in docker-compose.yml to make sure logs are correctly send to ELK stack [RITDEV-373]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,6 +173,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.rit.unimaas.nl
+      LOGSTASH_TAGS: CROSSREF_LOOKUP
     networks:
       - default
 networks:
