Added config var cfg_ThisMirthInstance to identify environment in alerts [RITDEV-510]

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -19,3 +19,4 @@ cfg_EpicHandlerUrl = http://pacman.RIT_ENV.rit.unimaas.nl
 cfg_CrossRefURL = http://crossref-lookup/works
 cfg_MirthConnectUser_UM = mdl-dev
 cfg_MirthConnectPassword_UM = foobar
+cfg_ThisMirthInstance=mirthconnect.RIT_ENV
