--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,6 +185,25 @@ services:
       LOGSTASH_TAGS: CROSSREF_LOOKUP
     networks:
       - default
+  epicpid:
+    build: externals/epicpid-microservice
+    volumes:
+      - ./externals/epicpid-microservice/:/opt/app
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      VIRTUAL_HOST: epicpid.${RIT_ENV}.rit.unimaas.nl
+      LOGSTASH_TAGS: EPIC_PID
+      LOG_LEVEL: DEBUG
+      USERNAME: user
+      PASSWORD: foobar
+      RABBITMQ_HOST : rabbitmq
+      RABBITMQ_USER : user
+      RABBITMQ_PASS : password
+    expose:
+     - "5000"
+    networks:
+      - default
+      - common_default
 networks:
   oculus_default:
     external: true
