Change PID microservice URL. RITDEV-432

--- a/mirthconnect/configuration.properties
+++ b/mirthconnect/configuration.properties
@@ -15,7 +15,7 @@ cfg_SolrUser = admin
 cfg_SolrPassword = admin
 cfg_EpicPassword = foobar
 cfg_EpicPrefix = 21.T12996
-cfg_EpicURL = http://epicpid
+cfg_EpicURL = http://epicpid/epic
 cfg_EpicUser = user
 cfg_EpicHandlerUrl = http://pacman.RIT_ENV.rit.unimaas.nl
 cfg_CrossRefURL = http://crossref-lookup/works
