--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,28 @@ services:
     networks:
       - default
       - common_default
+  ires-ceph:
+    build: ires-ceph/
+    hostname: ires-ceph
+    environment:
+      RODS_PASSWORD: irods
+      PGPASSWORD: foobar
+      VIRTUAL_HOST: ires-ceph.${RIT_ENV}.rit.unimaas.nl
+      IRODS_INGEST_REMOVE_DELAY: 5m
+      MIRTH_VALIDATION_CHANNEL: mirthconnect:6669
+      MIRTH_METADATA_CHANNEL: mirthconnect:6670
+      LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
+    networks:
+      - default
+      - common_default
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./irods.secrets.cfg:/etc/secrets:ro
+      - ./externals/irods-ruleset:/rules
+      - ./externals/irods-microservices:/microservices
+      - ./externals/irods-helper-cmd:/helpers
+    # Required for CIFS mounting. cap-add not enough in Windows for some reason.
+    privileged: true
   db:
     image: mysql:5.6
     hostname: db
