--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,8 +116,7 @@ services:
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
       - ./externals/irods-helper-cmd:/helpers
-    # Required for CIFS mounting. cap-add not enough in Windows for some reason.
-    privileged: true
+      - ./externals/irods_resource_plugin_rados:/irods_resource_plugin_rados
   db:
     image: mysql:5.6
     hostname: db
